# hipopybind

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  cross_x86_64_macos.txt  install_hipo.sh  meson.build  meson_options.txt  pyproject.toml  requirements.txt  setup.py  test_cppyy.py
.github/workflows/: build-and-publish-wheels.yml  python.yml  release.yml
hipo/: libhipo4.dylib
hipopybind/: __init__.py
src/: __init__.py  hipopybind_module.cpp  main.cpp
subprojects/: hipo4.wrap  pybind11.wrap
tests/: test_basic.py
tutorials/: write.py
