[build-system]
requires = [
    "meson>=1.0.0",
    "meson-python",
    "pybind11",
    "ninja"
]
build-backend = 'mesonpy'

[project]
name = "hipopybind"
version = "2.0.0"
description = "Python bindings for hipo using pybind11"
authors = [
  { name = "Matthew F. McEneaney", email = "matthew.mceneaney@duke.edu" }
]
readme = "README.md"
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.8"

[tool.poetry]
name = "hipopybind"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
clang-format = "^17.0.0"      # For local C++ formatting
meson-python = "^0.18.0"
