[build-system]
requires = [
    "meson>=1.0.0",
    "meson-python",
    "pybind11",
    "ninja"
]
build-backend = 'mesonpy'

[tool.poetry]
name = "hipopybind"
version = "2.0.0"
description = "Python bindings for hipo using pybind11"
authors = ["Matthew McEneaney <matthew.mceneaney@duke.edu>"]
repository = "https://github.com/mfmceneaney/hipopybind.git"
readme = "README.md"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3"]

[tool.poetry.dependencies]
python = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
clang-format = "^17.0.0"      # For local C++ formatting
meson-python = "^0.18.0"
