[build-system]
requires = [
    "meson>=1.2",
    "meson-python",
    "pybind11",
    "ninja>=1.8.2"
]
build-backend = 'mesonpy'

[tool.poetry]
name = "hipopybind"
version = "2.0.1"
description = "Python bindings for hipo using pybind11"
authors = ["Matthew McEneaney <matthew.mceneaney@duke.edu>"]
repository = "https://github.com/mfmceneaney/hipopybind.git"
readme = "README.md"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3"]

[tool.poetry.dependencies]
python = ">=3.9"
meson = ">=1.2"
ninja = ">=1.8.2"
pybind11 = ">=3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
clang-format = "^17.0.0"      # For local C++ formatting
meson-python = "^0.18.0"
